tests/negative/gold/ambiguous_test.gold
tests/negative/ambiguous_test.toit:9:3: error: Ambiguous resolution of 'foo'
  foo  // Ambiguous import.
  ^~~
tests/negative/ambiguous_a.toit:5:1: note: Resolution candidate for 'foo'
foo:
^~~
tests/negative/ambiguous_b.toit:5:1: note: Resolution candidate for 'foo'
foo:
^~~
Compilation failed.
